@@ -70,6 +70,8 @@ CVS Code -
 	  to answer == def.
 	- Fixed fallthrough code because there was no break.  Make much
 	  more sense now.
+	- Added check for ASCII 54[124] when using PDCURSES, ignore them
+	  if noticed.
   nanoget_repaint()
 	- New function, removes about 30 lines of duplicate code in 
 	  nanogetstr().
